Fixed minor bugs Updated dependencies